--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ dlt = {extras = ["duckdb"], version = "^0.3.0"}
 requests = "^2.30.0"
 questionary = "^1.10.0"
 enlighten = "^1.11.2"
+openapi3 = "^1.8.0"
+prance = "^23.6.21.0"
+openapi-spec-validator = "^0.5.7"
+jsonschema = "^4.17.3"
+openapi-schema-pydantic = "^1.2.4"
 
 [tool.poetry.scripts]
 dlt-init = "openapi_python_client.cli:app"
@@ -54,6 +59,7 @@ types-python-dateutil = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
+types-jsonschema = "^4.17.0.8"
 
 [tool.taskipy.tasks]
 check = """
