--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ include = ["CHANGELOG.md", "openapi_python_client/py.typed"]
 [tool.poetry.dependencies]
 python = "^3.8.1,<4.0"
 jinja2 = "^3.0.0"
-typer = "^0.6 || ^0.7.0"
+typer = "^0.9"
 colorama = {version = "^0.4.3", markers = "sys_platform == 'win32'"}
 shellingham = "^1.3.2"
 black = ">=23"
