--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,9 @@ jobs:
 
       - name: Check out
         uses: actions/checkout@master
-
+        with:
+          submodules: 'true'
+      
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
