--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "verified-sources"]
 	path = verified-sources
 	url = git@github.com:dlt-hub/verified-sources.git
+[submodule "openapi_python_client/verified-sources"]
+	path = openapi_python_client/verified-sources
+	url = git@github.com:dlt-hub/verified-sources.git
