--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "openapi_python_client/sources"]
-	path = openapi_python_client/sources
+[submodule "sources"]
+	path = sources
 	url = git@github.com:dlt-hub/verified-sources.git
