small cleanups and add proper transformer test

--- a/tests/cases/test_specs/pokeapi_parent_child_fixed.yml
+++ b/tests/cases/test_specs/pokeapi_parent_child_fixed.yml
@@ -58,7 +58,7 @@ paths:
       operationId: pokemon_read
       parameters:
       - in: path
-        name: id
+        name: name
         required: true
         schema:
           description: A unique integer value identifying this pokemon.
