--- a/tests/cases/test_specs/pokeapi_one_endpoint_no_paginator.yml
+++ b/tests/cases/test_specs/pokeapi_one_endpoint_no_paginator.yml
@@ -1,7 +1,6 @@
-# Fixed simple poke api spec to test single endpoint, no paginator, no endpoint schema
 openapi: 3.0.0
 info:
-  description: ''
+  description: 'Fixed simple poke api spec to test single endpoint, no paginator, no endpoint schema'
   title: 'pokeapi'
   version: '20220523'
 servers:
