--- a/tests/cases/test_specs/pokeapi_parent_child_fixed.yml
+++ b/tests/cases/test_specs/pokeapi_parent_child_fixed.yml
@@ -1,7 +1,6 @@
-# Fixed simple poke api spec to test resolution of child tables
 openapi: 3.0.0
 info:
-  description: ''
+  description: 'Fixed simple poke api spec to test resolution of child tables'
   title: 'pokeapi'
   version: '20220523'
 servers:
