--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,9 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 junit_family = "xunit2"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
