--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ openapi-schema-pydantic = "^1.2.4"
 pyjwt = "^2.8.0"
 cryptography = "^42.0.5"
 referencing = "^0.34.0"
+inflector = "^3.1.1"
 
 [tool.poetry.scripts]
 dlt-init = "openapi_python_client.cli:app"
