--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "openapi-python-client"
-version = "0.14.0"
-description = "Generate modern Python clients from OpenAPI"
-repository = "https://github.com/triaxtec/openapi-python-client"
+name = "dlt-openapi"
+version = "0.0.1"
+description = "Generate dlt Python clients from OpenAPI"
+repository = "https://github.com/dlt-hub/dlt-openapi"
 license = "MIT"
 keywords=["OpenAPI", "Client", "Generator"]
 authors = ["Dylan Anthony <danthony@triaxtec.com>"]
