--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ python-dateutil = "^2.8.1"
 httpx = ">=0.15.4,<0.25.0"
 autoflake = "^1.4 || ^2.0.0"
 PyYAML = "^6.0"
-dlt = {extras = ["duckdb"], version = "^0.4.8"}
+
+dlt = {extras = ["duckdb"], git = "git@github.com:dlt-hub/dlt.git", branch = "devel" }
 requests = "^2.30.0"
 questionary = "^1.10.0"
 enlighten = "^1.11.2"
