--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sources"]
 	path = sources
-	url = git@github.com:dlt-hub/verified-sources.git
+	url = https://github.com/dlt-hub/verified-sources.git
