update ci config

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - master
+      - devel
   pull_request:
     branches:
       - master
+      - devel
   workflow_dispatch:
 
 concurrency:
