add requests types

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ cryptography = "^42.0.5"
 referencing = "^0.34.0"
 inflector = "^3.1.1"
 loguru = "^0.7.2"
+types-requests = "^2.31.0.20240406"
 
 [tool.poetry.scripts]
 dlt-openapi = "dlt_openapi.cli:app"
