take the actually set security scheme

--- a/tests/cases/artificial_specs/auth/oauth.yml
+++ b/tests/cases/artificial_specs/auth/oauth.yml
@@ -14,6 +14,8 @@ components:
           scopes:
             read: Grants read access
             write: Grants write access
+security:
+  - oauth2: [] 
 paths:
   /api/v2/pokemon/:
     get:
