--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
 
-  run_lint:
+  run_tests:
     name: test
     strategy:
       fail-fast: true
@@ -56,7 +56,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: .venv
-          key: venv-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: venv2-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
         run: make dev
@@ -77,7 +77,7 @@ jobs:
 
   matrix_job_required_check:
     name: lint | code & tests
-    needs: run_lint
+    needs: run_tests
     runs-on: ubuntu-latest
     if: always()
     steps:
