normalize output files and folders add pipeline suffix for pipeline files

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ custom-e2e/
 
 client/
 *-pipeline/
+*_pipeline/
 tests/_local/
 .DS_Store
 !hackathon/*-pipeline/
+!hackathon/*_pipeline/
 rest_api
