--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dlt-init-openapi"
-version = "0.1.0a3"
+version = "0.1.0"
 description = "Generate dlt Python clients from OpenAPI"
 homepage = "https://dlthub.com"
 repository = "https://github.com/dlt-hub/dlt-init-openapi"
